[tool.poetry]
name = "goit-python-25-web-hw-4"
version = "0.1.0"
description = ""
authors = ["AndreShiZap <andreshizap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
